tests/baselines/reference/validRegexp.errors.txt
==== tests/cases/compiler/validRegexp.ts (1 errors) ====
    var x = / [a - z /]$ / i;
                           ~
!!! validRegexp.ts(1,24): error TS1005: ',' expected.
    var x1 = /[a-z/]$/i;
    var x2 = /[a-z/]$ /i;